[gd_scene load_steps=15 format=3 uid="uid://s72astt3jqi8"]

[ext_resource type="Script" path="res://addons/GameGUI/GGInitialWindowSize.gd" id="1_vk4tw"]
[ext_resource type="Script" path="res://addons/GameGUI/GGComponent.gd" id="2_g0xq4"]
[ext_resource type="Texture2D" uid="uid://dndufxyta07qj" path="res://Background.png" id="2_yy4fm"]
[ext_resource type="Script" path="res://addons/GameGUI/GGTextureRect.gd" id="3_yjvjq"]
[ext_resource type="Script" path="res://addons/GameGUI/GGOverlay.gd" id="5_1wg16"]
[ext_resource type="Texture2D" uid="uid://b1s3wbm2eqk5m" path="res://Godot.png" id="6_a1gd3"]
[ext_resource type="Script" path="res://addons/GameGUI/GGLabel.gd" id="7_7fgfl"]
[ext_resource type="Script" path="res://addons/GameGUI/GGVBox.gd" id="7_u7o6r"]
[ext_resource type="Script" path="res://addons/GameGUI/GGFiller.gd" id="8_evd4p"]
[ext_resource type="Script" path="res://addons/GameGUI/GGMarginLayout.gd" id="9_jlyx2"]
[ext_resource type="Script" path="res://addons/GameGUI/GGHBox.gd" id="11_y6opp"]
[ext_resource type="Script" path="res://TextArea.gd" id="12_kat07"]
[ext_resource type="Script" path="res://addons/GameGUI/GGButton.gd" id="13_a6138"]
[ext_resource type="Script" path="res://Border.gd" id="14_6xi7d"]

[node name="GGInitialWindowSize" type="Container"]
texture_filter = 4
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_vk4tw")
initial_window_size = Vector2(800, 600)
layout_size = Vector2(1, 1)
parameters = {
"safe_area_bottom_margin": 0.0,
"safe_area_left_margin": 0.0,
"safe_area_right_margin": 0.0,
"safe_area_top_margin": 0.0
}

[node name="GGComponent - Size Ref" type="Container" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_g0xq4")
horizontal_mode = 1
vertical_mode = 1
layout_size = Vector2(1, 1)

[node name="BG" type="Container" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_g0xq4")

[node name="GGTextureRect" type="TextureRect" parent="BG"]
layout_mode = 2
texture = ExtResource("2_yy4fm")
expand_mode = 1
script = ExtResource("3_yjvjq")
horizontal_mode = 2
vertical_mode = 2
layout_size = Vector2(960, 448)
is_configured = true

[node name="ColorRect" type="ColorRect" parent="BG"]
layout_mode = 2
color = Color(0, 0, 0, 0.266667)

[node name="Overlays" type="Container" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_g0xq4")

[node name="GGOverlay" type="Container" parent="Overlays"]
layout_mode = 2
script = ExtResource("5_1wg16")
h_scale_constant = 0.3561

[node name="GGTextureRect - Icon" type="TextureRect" parent="Overlays/GGOverlay"]
layout_mode = 2
texture = ExtResource("6_a1gd3")
expand_mode = 1
script = ExtResource("3_yjvjq")
horizontal_mode = 1
vertical_mode = 1
layout_size = Vector2(128, 128)
is_configured = true

[node name="GGOverlay2" type="Container" parent="Overlays"]
layout_mode = 2
script = ExtResource("5_1wg16")
child_y = 0.1515
h_scale_constant = 0.3561

[node name="GGLabel - GameGUI" type="Label" parent="Overlays/GGOverlay2" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GameGUI"
horizontal_alignment = 1
script = ExtResource("7_7fgfl")
text_size_mode = 1
reference_node = NodePath("../../../BG")
reference_node_height = 480
reference_font_size = 80
vertical_mode = 5
layout_size = Vector2(0, 137)
is_configured = true

[node name="GGOverlay3" type="Container" parent="Overlays"]
layout_mode = 2
script = ExtResource("5_1wg16")
child_y = 0.25
h_scale_constant = 0.3561

[node name="GGLabel - GGLabel" type="Label" parent="Overlays/GGOverlay3" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.533333)
theme_override_font_sizes/font_size = 25
text = "[GGOverlay + GGLabel]"
horizontal_alignment = 1
script = ExtResource("7_7fgfl")
text_size_mode = 1
reference_node = NodePath("../../../BG")
reference_node_height = 480
reference_font_size = 20
vertical_mode = 5
layout_size = Vector2(0, 35)
is_configured = true

[node name="GGOverlay4" type="Container" parent="Overlays"]
layout_mode = 2
script = ExtResource("5_1wg16")
child_y = 0.6742
h_scale_constant = 0.3561

[node name="GGLabel - GGTextureRect" type="Label" parent="Overlays/GGOverlay4" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.533333)
theme_override_font_sizes/font_size = 25
text = "[GGOverlay + GGTextureRect]"
horizontal_alignment = 1
script = ExtResource("7_7fgfl")
text_size_mode = 1
reference_node = NodePath("../../../BG")
reference_node_height = 480
reference_font_size = 20
vertical_mode = 5
layout_size = Vector2(0, 35)
is_configured = true

[node name="GGVBox - Text Area" type="Container" parent="."]
layout_mode = 2
script = ExtResource("7_u7o6r")

[node name="GGFiller" type="Container" parent="GGVBox - Text Area"]
layout_mode = 2
size_flags_stretch_ratio = 2.5
mouse_filter = 2
script = ExtResource("8_evd4p")

[node name="GGMarginLayout - Outer" type="Container" parent="GGVBox - Text Area" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
script = ExtResource("9_jlyx2")
left_margin = 0.0333333
right_margin = 0.0333333
bottom_margin = 0.0333333
reference_node = NodePath("../../GGComponent - Size Ref")

[node name="GGMarginLayout - Inner" type="Container" parent="GGVBox - Text Area/GGMarginLayout - Outer" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
mouse_filter = 2
script = ExtResource("9_jlyx2")
left_margin = 0.00833333
top_margin = 0.00833333
right_margin = 0.00833333
bottom_margin = 0.00833333
reference_node = NodePath("../../../GGComponent - Size Ref")

[node name="GGHBox" type="Container" parent="GGVBox - Text Area/GGMarginLayout - Outer/GGMarginLayout - Inner"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("11_y6opp")

[node name="GGRichTextLabel - Text Area" type="RichTextLabel" parent="GGVBox - Text Area/GGMarginLayout - Outer/GGMarginLayout - Inner/GGHBox" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
bbcode_enabled = true
text = "GameGUI is a set of Godot Control nodes that provide alternative layout capabilities to the built-in Container classes. With Godot's built-in containers it is easy to make fixed-layout UI's that scale with the screen resolution OR dynamic (responsive) layouts with fixed-size controls (such as labels), but it can be difficult to make dynamic layouts with scaling controls. GameGUI solves the latter case. Click the buttons on the right for additional information."
script = ExtResource("12_kat07")
text_size_mode = 1
reference_node = NodePath("..")
reference_node_height = 145
reference_font_sizes = {
"bold": 16,
"bold_italics": 16,
"italics": 16,
"mono": 16,
"normal": 16
}
layout_size = Vector2(3481, 23)
is_configured = true

[node name="ReferenceRect - Border" type="ReferenceRect" parent="GGVBox - Text Area/GGMarginLayout - Outer"]
layout_mode = 2
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
editor_only = false

[node name="GGVBox2 - Side Buttons" type="Container" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("7_u7o6r")

[node name="GGFiller" type="Container" parent="GGVBox2 - Side Buttons"]
layout_mode = 2
size_flags_stretch_ratio = 0.84
script = ExtResource("8_evd4p")

[node name="GGHBox" type="Container" parent="GGVBox2 - Side Buttons"]
layout_mode = 2
script = ExtResource("11_y6opp")

[node name="GGFiller" type="Container" parent="GGVBox2 - Side Buttons/GGHBox"]
layout_mode = 2
script = ExtResource("8_evd4p")

[node name="GGVBox - Buttons" type="Container" parent="GGVBox2 - Side Buttons/GGHBox"]
layout_mode = 2
size_flags_stretch_ratio = 0.33
script = ExtResource("7_u7o6r")

[node name="GGMarginLayout" type="Container" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
script = ExtResource("9_jlyx2")
left_margin = 0.0125
top_margin = 0.00416667
right_margin = 0.0
bottom_margin = 0.00416667
reference_node = NodePath("../../../../GGComponent - Size Ref")

[node name="GGButton - Layout" type="Button" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 17
text = "Layout"
script = ExtResource("13_a6138")
text_size_mode = 1
reference_node = NodePath("..")
reference_node_height = 36
reference_font_size = 14
is_configured = true

[node name="Control" type="Control" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout/GGButton - Layout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("14_6xi7d")

[node name="GGMarginLayout2" type="Container" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
script = ExtResource("9_jlyx2")
left_margin = 0.0125
top_margin = 0.00416667
right_margin = 0.0
bottom_margin = 0.00416667
reference_node = NodePath("../../../../GGComponent - Size Ref")

[node name="GGButton - Text" type="Button" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout2" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Text"
script = ExtResource("13_a6138")
text_size_mode = 1
reference_node = NodePath("..")
reference_node_height = 36
reference_font_size = 14
is_configured = true

[node name="Control2" type="Control" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout2/GGButton - Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("14_6xi7d")

[node name="GGMarginLayout3" type="Container" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
script = ExtResource("9_jlyx2")
left_margin = 0.0125
top_margin = 0.00416667
right_margin = 0.0
bottom_margin = 0.00416667
reference_node = NodePath("../../../../GGComponent - Size Ref")

[node name="GGButton - Images" type="Button" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout3" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Images"
script = ExtResource("13_a6138")
text_size_mode = 1
reference_node = NodePath("..")
reference_node_height = 36
reference_font_size = 14
is_configured = true

[node name="Control3" type="Control" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout3/GGButton - Images"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("14_6xi7d")

[node name="GGMarginLayout4" type="Container" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
script = ExtResource("9_jlyx2")
left_margin = 0.0125
top_margin = 0.00416667
right_margin = 0.0
bottom_margin = 0.00416667
reference_node = NodePath("../../../../GGComponent - Size Ref")

[node name="GGButton - Misc" type="Button" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout4" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Misc"
script = ExtResource("13_a6138")
text_size_mode = 1
reference_node = NodePath("../../GGMarginLayout3")
reference_node_height = 36
reference_font_size = 14
is_configured = true

[node name="Control4" type="Control" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout4/GGButton - Misc"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("14_6xi7d")

[node name="GGLabel" type="Label" parent="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons" node_paths=PackedStringArray("reference_node")]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.533333)
theme_override_font_sizes/font_size = 18
text = "[GGButtons]"
horizontal_alignment = 1
script = ExtResource("7_7fgfl")
text_size_mode = 1
reference_node = NodePath("..")
reference_node_height = 179
reference_font_size = 16
vertical_mode = 5
layout_size = Vector2(0, 26)
is_configured = true

[node name="GGFiller2" type="Container" parent="GGVBox2 - Side Buttons/GGHBox"]
layout_mode = 2
script = ExtResource("8_evd4p")
horizontal_mode = 3
layout_size = Vector2(0.025, 1)

[node name="GGFiller2" type="Container" parent="GGVBox2 - Side Buttons"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("8_evd4p")

[connection signal="pressed" from="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout/GGButton - Layout" to="GGVBox - Text Area/GGMarginLayout - Outer/GGMarginLayout - Inner/GGHBox/GGRichTextLabel - Text Area" method="_on_gg_button__layout_pressed"]
[connection signal="pressed" from="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout2/GGButton - Text" to="GGVBox - Text Area/GGMarginLayout - Outer/GGMarginLayout - Inner/GGHBox/GGRichTextLabel - Text Area" method="_on_gg_button__text_pressed"]
[connection signal="pressed" from="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout3/GGButton - Images" to="GGVBox - Text Area/GGMarginLayout - Outer/GGMarginLayout - Inner/GGHBox/GGRichTextLabel - Text Area" method="_on_gg_button__images_pressed"]
[connection signal="pressed" from="GGVBox2 - Side Buttons/GGHBox/GGVBox - Buttons/GGMarginLayout4/GGButton - Misc" to="GGVBox - Text Area/GGMarginLayout - Outer/GGMarginLayout - Inner/GGHBox/GGRichTextLabel - Text Area" method="_on_gg_button__misc_pressed"]
